# Phishing-Website-and-Fraud-Email-Detection

./: "Phishing_Detection_EDA_+_Features_+_ML"_.ipynb  Email spam - GenAI  README.md  app.py  info.txt  phishing_detector.py  pyproject.toml  train_model.py
Notebook/: PhishingURLDetector.ipynb  _Phishing_Detection_EDA_+_Features_+_ML__.ipynb  email-spam-genai.ipynb
attached_assets/: Pasted--pip-install-tldextract-import-pandas-as-pd-import-numpy-as-np-from-urllib-parse-import-urlparse-im-1739953373521.txt
static/css/: custom.css
static/js/: main.js
templates/: about.html  base.html  contact.html  documentation.html  faq.html  index.html  report.html  security-guide.html  security_guide.html  statistics.html
